Work toward fixing footer bar on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -46,7 +46,7 @@ html {
 }
 
 #app {
-  height: 100% !important;
+  height: 100vh !important;
 }
 
 :root {
